--- a/Arrays & Hashing/01. Contains Duplicate.html
+++ b/Arrays & Hashing/01. Contains Duplicate.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <script>
+        function containsDuplicate(nums) {
+
+            let seen = new Set();
+
+            for (let num of nums) {
+                if (seen.has(num)) {
+                    return true;
+                }
+
+                seen.add(num)
+            }
+
+            return false;
+        }
+
+        nums = [1, 2, 3, 4]
+
+        console.log(containsDuplicate(nums));
+
+    </script>
 </body>
+
 </html>
