--- a/Arrays & Hashing/02. Valid Anagram.html
+++ b/Arrays & Hashing/02. Valid Anagram.html
@@ -12,6 +12,19 @@
         function isAnagram(s, t) {
 
             if(s.length !== t.length) return false;
+
+            let map = new Map();
+
+            for(let i = 0; i < s.length; i++){
+                map.set(s[i], map.get(s[i] || 0) + 1);
+                map.set(t[i], map.get(t[i] || 0) - 1);
+            }
+
+            for(let [,val] in map){
+                if(val !== 0) return false;
+            }
+
+            return true
         }
 
 
