--- a/Arrays & Hashing/07. Products of Array Except Self.html
+++ b/Arrays & Hashing/07. Products of Array Except Self.html
@@ -25,7 +25,8 @@
             return res;
         }
 
-        
+        nums = [1, 2, 4, 6];
+        console.log(productExceptSelf(nums));
     </script>
 </body>
 
