--- a/demo.html
+++ b/demo.html
@@ -18,14 +18,30 @@
         }
 
 
-        function decode(str){
-            
+        function decode(str) {
+            let res = [];
+            let i = 0;
+            while (i < str.length) {
+                let j = i;
+                while (str[j] !== '#') {
+                    j++;
+                }
+                let length = parseInt(str.substring(i, j));
+                i = j + 1;
+                j = i + length;
+                res.push(str.substring(i, j));
+                i = j;
+            }
+            return res;
         }
 
 
         const strs = ["neet", "code", "love", "you"];
         const encoded = encode(strs);
         console.log("Encoded:", encoded);
+
+        const decoded = decode(encoded);
+        console.log("Decoded:", decoded);
     </script>
 </body>
 
