--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,31 @@
             return res;
         }
 
-  
+
+
+        function decode(str) {
+            let res = [];
+            let i = 0;
+
+            while (i < str.length) {
+
+                let j = i;
+
+                if(str[j] !== '#'){
+                    j++
+                }
+
+                let length = parseInt(str.substring(i,j));
+                i = j+1;
+                j = i + length;
+
+                res.push(str.substring(i,j));
+
+                i = j;
+
+            }
+            return res;
+        }
 
 
         const strs = ["neet", "code", "love", "you"];
