--- a/03. Sliding Window/01. Best Time to Buy and Sell Stock.html
+++ b/03. Sliding Window/01. Best Time to Buy and Sell Stock.html
@@ -10,8 +10,8 @@
 <body>
     <script>
         function maxProfit(prices) {
-            let l = 0,
-                r = 1;
+            let l = 0;
+            let   r = 1;
             let maxP = 0;
 
             while (r < prices.length) {
