--- a/03. Sliding Window/04. Minimum Window Substring.html
+++ b/03. Sliding Window/04. Minimum Window Substring.html
@@ -37,7 +37,7 @@
                 window[c] = (window[c] || 0) + 1;
 
                 // There are two conditions are check:
-                // First is countT[c] this checks that current character of window is presents in countT are not.
+                // First is countT[c] this checks that current character of window is presents in countT are not. means Only count characters that present in coutnT.
                 // Second is window[c] === countT[c] this checks that current character of window is equal of countT character.
 
                 if (countT[c] && window[c] === countT[c]) {
