--- a/04. Stack/Valid Parentheses.html
+++ b/04. Stack/Valid Parentheses.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valid Parentheses</title>
 </head>
+
 <body>
-    
+    <script>
+        class Solution {
+            /**
+             * @param {string} s
+             * @return {boolean}
+             */
+            isValid(s) {
+                const stack = [];
+                const closeToOpen = {
+                    ')': '(',
+                    ']': '[',
+                    '}': '{',
+                };
+
+                for (let c of s) {
+                    if (closeToOpen[c]) {
+                        if (
+                            stack.length > 0 &&
+                            stack[stack.length - 1] === closeToOpen[c]
+                        ) {
+                            stack.pop();
+                        } else {
+                            return false;
+                        }
+                    } else {
+                        stack.push(c);
+                    }
+                }
+                return stack.length === 0;
+            }
+        }
+    </script>
 </body>
+
 </html>
