--- a/04. Stack/Valid Parentheses.html
+++ b/04. Stack/Valid Parentheses.html
@@ -9,35 +9,29 @@
 
 <body>
     <script>
-        class Solution {
-            /**
-             * @param {string} s
-             * @return {boolean}
-             */
-            isValid(s) {
-                const stack = [];
-                const closeToOpen = {
-                    ')': '(',
-                    ']': '[',
-                    '}': '{',
-                };
+        function isValid(s) {
+            const stack = [];
+            const closeToOpen = {
+                ')': '(',
+                ']': '[',
+                '}': '{',
+            };
 
-                for (let c of s) {
-                    if (closeToOpen[c]) {
-                        if (
-                            stack.length > 0 &&
-                            stack[stack.length - 1] === closeToOpen[c]
-                        ) {
-                            stack.pop();
-                        } else {
-                            return false;
-                        }
+            for (let c of s) {
+                if (closeToOpen[c]) {
+                    if (
+                        stack.length > 0 &&
+                        stack[stack.length - 1] === closeToOpen[c]
+                    ) {
+                        stack.pop();
                     } else {
-                        stack.push(c);
+                        return false;
                     }
+                } else {
+                    stack.push(c);
                 }
-                return stack.length === 0;
             }
+            return stack.length === 0;
         }
     </script>
 </body>
