--- a/04. Stack/Valid Parentheses.html
+++ b/04. Stack/Valid Parentheses.html
@@ -33,6 +33,9 @@
             }
             return stack.length === 0;
         }
+
+        s = "([{}])";
+        console.log(isValid(s));
     </script>
 </body>
 
