--- a/04. Stack/Valid Parentheses.html
+++ b/04. Stack/Valid Parentheses.html
@@ -11,6 +11,7 @@
     <script>
         function isValid(s) {
             const stack = [];
+
             const map = {
                 ')': '(',
                 ']': '[',
@@ -19,10 +20,7 @@
 
             for (let c of s) {
                 if (map[c]) {
-                    if (
-                        stack.length > 0 &&
-                        stack[stack.length - 1] === map[c]
-                    ) {
+                    if (stack.length > 0 && stack[stack.length - 1] === map[c]) {
                         stack.pop();
                     } else {
                         return false;
