--- a/06. Linked List/02. Merge Two Sorted Linked Lists.html
+++ b/06. Linked List/02. Merge Two Sorted Linked Lists.html
@@ -16,7 +16,7 @@
             let node = dummy;
 
             // Iterate while both lists have nodes
-            while (list1 && list2) {
+            while (list1 !== null && list2 !== null) {
                 // Compare the current values of list1 and list2
                 if (list1.val < list2.val) {
                     // If list1's value is smaller, add it to the merged list
