--- a/06. Linked List/04. Reorder Linked List.html
+++ b/06. Linked List/04. Reorder Linked List.html
@@ -36,7 +36,7 @@
 
             // Step 3: Merge the two halves
             let first = head;               // pointer for the first half
-            second = prev;                  // pointer for the reversed second half
+            let second = prev;                  // pointer for the reversed second half
             while (second !== null) {
                 const tmp1 = first.next;    // store next node from first half
                 const tmp2 = second.next;   // store next node from second half
