--- a/06. Linked List/04. Reorder Linked List.html
+++ b/06. Linked List/04. Reorder Linked List.html
@@ -10,6 +10,10 @@
 <body>
     <script>
         function reorderList(head) {
+            if(head == null || head.next == null || head.next.next == null){
+                return;
+            }
+            
             // Step 1: Use two pointers (slow and fast) to find the middle of the list
             let slow = head;
             let fast = head.next;
