--- a/07. Trees/01. Invert Binary Tree.html
+++ b/07. Trees/01. Invert Binary Tree.html
@@ -11,6 +11,16 @@
     <script>
         function invertTree(root) {
             if (!root) return null;
+
+            [root.left, root.right] = [root.right, root.left];
+            this.invertTree(root.left);
+            this.invertTree(root.right);
+
+            return root;
+        }
+        
+        function invertTree(root) {
+            if (!root) return null;
             const stack = [root];
             while (stack.length) {
                 const node = stack.pop();
