--- a/07. Trees/05. Lowest Common Ancestor in Binary Search Tree.html
+++ b/07. Trees/05. Lowest Common Ancestor in Binary Search Tree.html
@@ -19,7 +19,7 @@
                     return root;
                 }
             }
-            return null;
+            return null
         }
     </script>
 </body>
