--- a/09. Backtracking/01. Combination Sum.html
+++ b/09. Backtracking/01. Combination Sum.html
@@ -29,6 +29,8 @@
             backtrack(0, [], target);
             return result;
         }
+
+        console.log(combinationSum([2, 3, 6, 7], 7));
     </script>
 </body>
 
