--- a/09. Backtracking/01. Combination Sum.html
+++ b/09. Backtracking/01. Combination Sum.html
@@ -47,7 +47,7 @@
 
 
         const solution = new Solution();
-        console.log(solution.combinationSum([2, 3, 6, 7], 7))
+        console.log(solution.combinationSum([2, 3, 6, 7], 7));
     </script>
 </body>
 
