--- a/10. Tries/03. Word Search II.html
+++ b/10. Tries/03. Word Search II.html
@@ -11,13 +11,10 @@
     <script>
         class TrieNode {
             constructor() {
-                this.children = {};
+                this.children = new Map();
                 this.isWord = false;
             }
         }
-
-
-
 
 
         class Solution {
@@ -25,69 +22,87 @@
                 this.root = new TrieNode();
             }
 
-
+             // Add a word to the Trie
             addWord(word) {
                 let cur = this.root;
                 for (const c of word) {
-                    if (!(c in cur.children)) {
-                        cur.children[c] = new TrieNode();
+                    if (!cur.children.has(c)) {
+                        cur.children.set(c, new TrieNode());
                     }
-                    cur = cur.children[c];
+                    cur = cur.children.get(c);
                 }
                 cur.isWord = true;
             }
 
 
-
             findWords(board, words) {
+                // First, insert all words into the Trie
                 for (const word of words) {
                     this.addWord(word);
                 }
 
-                const ROWS = board.length,
-                    COLS = board[0].length;
-                const res = new Set(),
-                    visit = new Set();
+                const ROWS = board.length;
+                const COLS = board[0].length;
+
+                // To store unique found words
+                const res = new Set();
+
+                // To track visited cells during DFS
+                const visit = new Set();
 
                 const dfs = (r, c, node, word) => {
+
+                    // Base conditions: out of bounds, already visited, or no matching child
                     if (
                         r < 0 ||
                         c < 0 ||
                         r >= ROWS ||
                         c >= COLS ||
                         visit.has(`${r},${c}`) ||
-                        !(board[r][c] in node.children)
+                        !node.children.has(board[r][c])
                     ) {
                         return;
                     }
 
+                    // Mark current cell as visited
                     visit.add(`${r},${c}`);
-                    node = node.children[board[r][c]];
+
+                    // Move to the next node in the Trie
+                    node = node.children.get(board[r][c]);
+
+                    // Append character to current word path
                     word += board[r][c];
+
+                    // If a valid word is found, add it to the result
                     if (node.isWord) {
                         res.add(word);
                     }
 
+
+                    // Explore all 4 directions: down, up, right, left
                     dfs(r + 1, c, node, word);
                     dfs(r - 1, c, node, word);
                     dfs(r, c + 1, node, word);
                     dfs(r, c - 1, node, word);
 
+                    // Backtrack: unmark the current cell
                     visit.delete(`${r},${c}`);
                 };
 
+
+                // Start DFS from each cell on the board
                 for (let r = 0; r < ROWS; r++) {
                     for (let c = 0; c < COLS; c++) {
                         dfs(r, c, this.root, '');
                     }
                 }
 
+
+                // Convert result set to array and return
                 return Array.from(res);
             }
 
         }
-
-
 
 
         // Test the code with a sample input
