--- a/11. Graphs/01. Number of Islands.html
+++ b/11. Graphs/01. Number of Islands.html
@@ -10,20 +10,21 @@
 <body>
     <script>
         class Solution {
-            /**
-             * @param {character[][]} grid
-             * @return {number}
-             */
+          
             numIslands(grid) {
+
                 const directions = [
                     [1, 0],
                     [-1, 0],
                     [0, 1],
                     [0, -1],
                 ];
-                const ROWS = grid.length,
-                    COLS = grid[0].length;
+
+                const ROWS = grid.length;
+                const COLS = grid[0].length;
                 let islands = 0;
+
+
 
                 const bfs = (r, c) => {
                     const q = new Queue();
@@ -48,6 +49,8 @@
                         }
                     }
                 };
+
+
 
                 for (let r = 0; r < ROWS; r++) {
                     for (let c = 0; c < COLS; c++) {
