--- a/11. Graphs/01. Number of Islands.html
+++ b/11. Graphs/01. Number of Islands.html
@@ -13,58 +13,23 @@
 
             numIslands(grid) {
 
-                // Directions for up, down, left, right
-                const directions = [
-                    [1, 0],    // down
-                    [-1, 0],   // up
-                    [0, 1],    // right
-                    [0, -1],   // left
-                ];
-
                 const ROWS = grid.length;
                 const COLS = grid[0].length;
                 let islands = 0;
 
+                const dfs = (r, c) => {
 
-                // Breadth-First Search to traverse and mark all land cells in the current island
-                const bfs = (r, c) => {
-
-                    // Initialize a queue for BFS
-                    const q = [];
-
-                    // Start from the given cell
-                    q.push([r, c]);
+                    if (r < 0 || c < 0 || r >= ROWS || c >= COLS || grid[r][c] === '0') {
+                        return;
+                    }
 
                     // Mark the cell as visited by converting '1' to '0'
                     grid[r][c] = '0';
 
-
-                    // Continue until the queue is empty
-                    while (q.length > 0) {
-
-                        // Dequeue the current cell
-                        const [row, col] = q.shift();
-
-                        // Explore all 4 directions
-                        for (const [dr, dc] of directions) {
-                            const nr = row + dr,
-                                nc = col + dc;
-
-                            // Check if the new cell is within bounds and is land
-                            if (
-                                nr >= 0 &&
-                                nc >= 0 &&
-                                nr < ROWS &&
-                                nc < COLS &&
-                                grid[nr][nc] === '1'
-                            ) {
-                                // Enqueue the land cell
-                                q.push([nr, nc]);
-                                // Mark it as visited    
-                                grid[nr][nc] = '0';
-                            }
-                        }
-                    }
+                    dfs(r - 1, c);  // Up
+                    dfs(r, c + 1);  // Right
+                    dfs(r + 1, c);  // Down
+                    dfs(r, c - 1);  // Left
                 };
 
 
@@ -73,19 +38,16 @@
                     for (let c = 0; c < COLS; c++) {
                         // Found unvisited land
                         if (grid[r][c] === '1') {
-                            // Visit the entire island using BFS
-                            bfs(r, c);
-                            // Increment island count           
+                            // Visit the entire island using DFS
+                            dfs(r, c);
                             islands++;
                         }
                     }
                 }
 
-                // Return total number of islands found
                 return islands;
             }
         }
-
 
 
         const grid = [
