--- a/11. Graphs/01. Number of Islands.html
+++ b/11. Graphs/01. Number of Islands.html
@@ -23,7 +23,7 @@
 
                 const ROWS = grid.length;
                 const COLS = grid[0].length;
-                let islands = 0
+                let islands = 0;
 
 
                 // Breadth-First Search to traverse and mark all land cells in the current island
