--- a/11. Graphs/01. Number of Islands.html
+++ b/11. Graphs/01. Number of Islands.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number of Island</title>
+    <title>Number of Islands</title>
 </head>
 <body>
     <script>
